@@ -1,2 +1,2 @@
-SIMUPOP_VER = "0.7.7"
-SIMUPOP_REV = "798"
+SIMUPOP_VER = "snapshot"
+SIMUPOP_REV = "9999"
