@@ -6,6 +6,7 @@ BUGS:
 version 0.7.8 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk
   - BUG: fix broken user interactive input
   - BUG: fix help feature of tkinter dialog
+  - NEW: bundle boost 1.33.1 with source package
 
 version 0.7.7 - (Rev 786) Feb 1, 2007
   -NEW (build): bring scons build system on par with python setup.py
